# agentic_ai_PoC_prj_hospitality

./: .gitignore  HOWTO_generate_synthetic_data.md  README.md  WORKSHOP.md  pyproject.toml  start-app.sh  stop-app.sh
ai_agents_hospitality-api/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  start.sh  test_exercise_1.py  verify_integration.py
ai_agents_hospitality-api/agents/: __init__.py  booking_sql_agent.py  hotel_rag_agent.py  hotel_simple_agent.py
ai_agents_hospitality-api/agents/rag/: build_vectorstore.py
ai_agents_hospitality-api/agents/rag/vectorstore/438b208e-5c41-480b-8078-493fea22758c/: index_metadata.pickle
ai_agents_hospitality-api/analytics_data/: hotel_details.md
ai_agents_hospitality-api/config/: agent_config.py  agent_config.yaml
ai_agents_hospitality-api/static/: scripts.js  styles.css
ai_agents_hospitality-api/templates/: index.html
ai_agents_hospitality-api/util/: __init__.py  configuration.py  logger_config.py
bookings-db/: .env  Dockerfile  definitions.md  docker-compose.yml  readme.md  requirements.txt
bookings-db/config/: generate_hotels_param.yaml  hotel_naming_location.yaml  hotel_queries.yaml
bookings-db/output_files/bookings/: all_bookings.xlsx
bookings-db/output_files/hotels/: all_hotels.csv  hotel_bookings.md  hotel_room_queries.csv  hotels.xlsx
bookings-db/src/: __init__.py  gen_synthetic_hotels.py
bookings-db/src/db/: init-db.sh  init.sql  load_data.py
bookings-db/src/generator/: __init__.py  booking_generator.py  hotel_generator.py  hotel_name_location_generator.py  hotel_query_generator.py  parametric_utils.py
bookings-db/src/output/: __init__.py  booking_output_writer.py  hotel_output_writer.py  hotel_query_writer.py
doc/: doc.excalidraw
prj-docker-compose/: .env  .env.example  docker-compose.yaml
