[project]
name = "ai-hospitality-api"
version = "0.1.0"
description = "AI Hospitality API - Workshop starter"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "jinja2==3.1.6",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



